--- a/index.html
+++ b/index.html
@@ -1,22 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>TEC.206.002</title>
 </head>
+
 <body>
-<header>
-    <nav class="container">
-        <h1>TEC.206.002-MOVIES</h1>
-        <div class="link-container">
-         <img src="img/gitHub.svg" alt="Github">
-            <a href="https://github.com/ingridcampello">Github</a>
-        </div>
-    </nav>
-</header>
-    
+    <header>
+        <nav class="container">
+            <h1>TEC.206.002-MOVIES</h1>
+            <div class="link-container">
+                <img src="img/gitHub.svg" alt="Github">
+                <a href="https://github.com/ingridcampello">Github</a>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section id="card-movies-list">
+            <div class="row">
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card-movies">
+                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/6wJxzsX0JCuquqNPXzWjhZ1jKXO.jpg"
+                            alt="">
+                        <div class="card-movies-descripition">
+                            <h3>Monster High</h3>
+                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card-movies">
+                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/bURIWlkMbzT8RdpemzCmQECo2Uh.jpg"
+                            alt="">
+                        <div class="card-movies-descripition">
+                            <h3>Venom</h3>
+                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card-movies">
+                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/icW2T6s4yHbeNuADS9H3NQoyJP3.jpg"
+                            alt="">
+                        <div class="card-movies-descripition">
+                            <h3>Tropa De Elite</h3>
+                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card-movies">
+                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/lCGpOgoTOGLtZnBiGY9HRg5Xnjd.jpg"
+                            alt="">
+                        <div class="card-movies-descripition">
+                            <h3>Orfã</h3>
+                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card-movies">
+                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/mpznYmAxtwM9jyLaB8VSHJV5hBS.jpg"
+                            alt="">
+                        <div class="card-movies-descripition">
+                            <h3>Coringa 2</h3>
+                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="card-movies">
+                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/aZUQ9D2QLZPume5otVG8RSsbZOi.jpg"
+                            alt="">
+                        <div class="card-movies-descripition">
+                            <h3>Carros 2</h3>
+                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
+
 </html>
