Score.html e Avaliações resolvidas

--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Monster High</h3>
-                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                            <div class="movies-card-description-star">
+                                <h4>3.8</h4>
+                                    <div>
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star_half.svg" alt="star">
+                                        <img src="img/star_empty.svg" alt="star">
+                                    </div>
+                                    <p>15 avaliações</p>
+                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -40,7 +51,18 @@
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Venom</h3>
-                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                            <div class="movies-card-description-star">
+                                <h4>4.8</h4>
+                                    <div>
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star_half.svg" alt="star">
+                                        <img src="img/star_empty.svg" alt="star">
+                                    </div>
+                                    <p>20 avaliações</p>
+                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -50,7 +72,18 @@
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Tropa De Elite</h3>
-                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                            <div class="movies-card-description-star">
+                                <h4>5.8</h4>
+                                    <div>
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star_half.svg" alt="star">
+                                        <img src="img/star_empty.svg" alt="star">
+                                    </div>
+                                    <p>13 avaliações</p>
+                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -60,7 +93,18 @@
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Orfã</h3>
-                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                            <div class="movies-card-description-star">
+                                <h4>7.6</h4>
+                                    <div>
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star_half.svg" alt="star">
+                                        <img src="img/star_empty.svg" alt="star">
+                                    </div>
+                                    <p>12 avaliações</p>
+                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -70,7 +114,18 @@
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Coringa 2</h3>
-                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                            <div class="movies-card-description-star">
+                                <h4>9,9</h4>
+                                    <div>
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star_half.svg" alt="star">
+                                        <img src="img/star_empty.svg" alt="star">
+                                    </div>
+                                    <p>23 avaliações</p>
+                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -80,7 +135,18 @@
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Carros 2</h3>
-                            <a class="movies-btn" href="score.html">AVALIAR</a>
+                            <div class="movies-card-description-star">
+                                <h4>5.0</h4>
+                                    <div>
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star.svg" alt="star">
+                                        <img src="img/star_half.svg" alt="star">
+                                        <img src="img/star_empty.svg" alt="star">
+                                    </div>
+                                    <p>2.9 avaliações</p>
+                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                            </div>
                         </div>
                     </div>
                 </div>
