--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="card-movies">
-                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/6wJxzsX0JCuquqNPXzWjhZ1jKXO.jpg"
+                        <img src="https://media.themoviedb.org/t/p/w500_and_h282_face/tXOcsNGkqsKx4YQtM4MywA3Azym.jpg"
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Monster High</h3>
@@ -47,12 +47,12 @@
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="card-movies">
-                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/bURIWlkMbzT8RdpemzCmQECo2Uh.jpg"
+                        <img src="https://media.themoviedb.org/t/p/w500_and_h282_face/jzT08lZch6AbYDHPn9TGryolz0P.jpg"
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Venom</h3>
                             <div class="movies-card-description-star">
-                                <h4>4.8</h4>
+                                <h4>4.0</h4>
                                     <div>
                                         <img src="img/star.svg" alt="star">
                                         <img src="img/star.svg" alt="star">
@@ -68,12 +68,12 @@
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="card-movies">
-                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/icW2T6s4yHbeNuADS9H3NQoyJP3.jpg"
+                        <img src="https://media.themoviedb.org/t/p/w500_and_h282_face/tGb044NgQYQJr58fta5O3OB6SpQ.jpg"
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Tropa De Elite</h3>
                             <div class="movies-card-description-star">
-                                <h4>5.8</h4>
+                                <h4>5.0</h4>
                                     <div>
                                         <img src="img/star.svg" alt="star">
                                         <img src="img/star.svg" alt="star">
@@ -89,12 +89,12 @@
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="card-movies">
-                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/lCGpOgoTOGLtZnBiGY9HRg5Xnjd.jpg"
+                        <img src="https://media.themoviedb.org/t/p/w500_and_h282_face/p5ixxu4V6VYBvr26xBKsaPrElu6.jpg"
                             alt="">
                         <div class="card-movies-descripition">
-                            <h3>Orfã</h3>
+                            <h3>Coraline</h3>
                             <div class="movies-card-description-star">
-                                <h4>7.6</h4>
+                                <h4>3.0</h4>
                                     <div>
                                         <img src="img/star.svg" alt="star">
                                         <img src="img/star.svg" alt="star">
@@ -110,12 +110,12 @@
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="card-movies">
-                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/mpznYmAxtwM9jyLaB8VSHJV5hBS.jpg"
+                        <img src="https://media.themoviedb.org/t/p/w500_and_h282_face/jFWuufqtmNlf0JdIQCndycH6eCr.jpg"
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Coringa 2</h3>
                             <div class="movies-card-description-star">
-                                <h4>9,9</h4>
+                                <h4>5.0</h4>
                                     <div>
                                         <img src="img/star.svg" alt="star">
                                         <img src="img/star.svg" alt="star">
@@ -131,12 +131,12 @@
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="card-movies">
-                        <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/aZUQ9D2QLZPume5otVG8RSsbZOi.jpg"
+                        <img src="https://media.themoviedb.org/t/p/w500_and_h282_face/4BS8tgBNWg2jPiDlBwM2iJe1xB7.jpg"
                             alt="">
                         <div class="card-movies-descripition">
                             <h3>Carros 2</h3>
                             <div class="movies-card-description-star">
-                                <h4>5.0</h4>
+                                <h4>2.0</h4>
                                     <div>
                                         <img src="img/star.svg" alt="star">
                                         <img src="img/star.svg" alt="star">
@@ -144,11 +144,22 @@
                                         <img src="img/star_half.svg" alt="star">
                                         <img src="img/star_empty.svg" alt="star">
                                     </div>
-                                    <p>2.9 avaliações</p>
+                                    <p>15 avaliações</p>
                                 <a class="movies-btn" href="score.html">AVALIAR</a>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="movies-pagination-container">
+                <div class="movies-pagination-box">
+                <button disabled>
+                    <img src="/img/arrow.svg" alt="Voltar">
+                </button>
+                <p>1 de 15</p>
+                <button  class="movies-button-flip">
+                    <img src="/img/arrow.svg" alt="Avançar">
+                </button>
                 </div>
             </div>
         </section>
