--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="row">
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="card-movies">
-                        <img src="https://media.themoviedb.org/t/p/w500_and_h282_face/tXOcsNGkqsKx4YQtM4MywA3Azym.jpg"
+                        <img src="https://media.themoviedb.org/t/p/w500_and_h282_face/6JIt4kiymurp4B8RIY53ufATNel.jpg"
                             alt="">
                         <div class="card-movies-descripition">
-                            <h3>Monster High</h3>
+                            <h3>Alto Da Compadecida</h3>
                             <div class="movies-card-description-star">
                                 <h4>3.8</h4>
                                     <div>
