--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <section id="card-movies-list">
+        <section id="card-movies-list" class="container">
             <div class="row">
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="card-movies">
@@ -40,7 +40,7 @@
                                         <img src="img/star_empty.svg" alt="star">
                                     </div>
                                     <p>15 avaliações</p>
-                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                                <a class="movies-btn" href="http://127.0.0.1:5500/score.html"target="_blank">AVALIAR</a>
                             </div>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                                         <img src="img/star_empty.svg" alt="star">
                                     </div>
                                     <p>20 avaliações</p>
-                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                                <a class="movies-btn" href="http://127.0.0.1:5500/score02.html" target="_blank">AVALIAR</a>
                             </div>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                                         <img src="img/star_empty.svg" alt="star">
                                     </div>
                                     <p>13 avaliações</p>
-                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                                <a class="movies-btn" href="http://127.0.0.1:5500/score03.html" target="_blank">AVALIAR</a>
                             </div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                                         <img src="img/star_empty.svg" alt="star">
                                     </div>
                                     <p>12 avaliações</p>
-                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                                <a class="movies-btn" href="http://127.0.0.1:5500/score04.html" target="_blank">AVALIAR</a>
                             </div>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                                         <img src="img/star_empty.svg" alt="star">
                                     </div>
                                     <p>23 avaliações</p>
-                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                                <a class="movies-btn" href="http://127.0.0.1:5500/score05.html" target="_blank">AVALIAR</a>
                             </div>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                                         <img src="img/star_empty.svg" alt="star">
                                     </div>
                                     <p>15 avaliações</p>
-                                <a class="movies-btn" href="score.html">AVALIAR</a>
+                                <a class="movies-btn" href="http://127.0.0.1:5500/score06.html" target="_blank">AVALIAR</a>
                             </div>
                         </div>
                     </div>
