--- a/score06.html
+++ b/score06.html
@@ -26,10 +26,10 @@
             <div class="container-score container">
                 <div>
                     <div class="card-movies">
-                        <img src="https://media.themoviedb.org/t/p/w500_and_h282_face/6JIt4kiymurp4B8RIY53ufATNel.jpg"
+                        <img src="https://media.themoviedb.org/t/p/w500_and_h282_face/4BS8tgBNWg2jPiDlBwM2iJe1xB7.jpg"
                             alt="">
                         <div class="card-score-description">
-                            <h3>Alto Da Compadecida</h3>
+                            <h3>Carros 2</h3>
                             <form class="movies-score">
                                 <div class="form-group movies-form-group">
                                     <label for="email">
